--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "protractor ./conf.js",
-    "report": "node reporter.js"
+    "report": "node reporter.js",
+    "apitest": "mocha ./api/supertest.test.js"
   },
   "author": "Carlos Morfín",
   "license": "ISC",
@@ -17,6 +18,7 @@
   },
   "devDependencies": {
     "cucumber-html-reporter": "^5.2.0",
-    "protractor-jasmine2-screenshot-reporter": "^0.5.0"
+    "mocha": "^8.1.1",
+    "supertest": "^4.0.2"
   }
 }
